Fix deprecation and code duplication